k8s/order-deployment (1).yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: nitinkh92/eclipsse-order-service:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
