k8s/payment-deployment (1).yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: nitinkh92/payment-service:v5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
          resources:
              requests:
                cpu: "100m"
                memory: "128Mi"
