k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: nitinkh92/eclipsse-user-service:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          resources:
              requests:
                cpu: "100m"
                memory: "128Mi"
