k8s/payment-service (1).yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  annotations:
    cloud.google.com/backend-config: '{"default": "payment-backendconfig"}'
spec:
  type: ClusterIP
  selector:
    app: payment-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8083
