k8s/user-service (1).yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  annotations:
    cloud.google.com/backend-config: '{"default": "user-backendconfig"}'
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
